# intellij-community

./: .bazelignore  .bazeliskrc  .bazeliskversion  .bazelproject  .bazelrc  .bazelversion  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  2 don't be greedy  AGENTS.md  BUILD  BUILD.bazel  CIDR  CIDR_LICENSE.txt  CONTRIBUTING.md  Charges  Dockerfile  LICENSE.txt  Lawsuit  Lostdir.shado  MAST_MACOS_ARTIFACTS.md  MAST_PLATFORM_SPIKE.md  MAST_REMOTE_SUBSTRATE_SPIKE.md  MIGRATION_REPORT.md  MODULE.bazel  Metronome.BI  NOTICE  NOTICE.txt  OWNERS  PREUPLOAD.cfg  README.md  RELEASE.md  Rider-Diagram-Generic-Guide.md  Rider-Diagram-UE-CPP-Guide.md  SECURITY.md  baaar  (+46 more)
aether-dependency-resolver/: BUILD  BUILD.bazel  module-content.yaml
aether-dependency-resolver/plugin/: BUILD.bazel  plugin-content.yaml
aether-dependency-resolver/resources/: intellij.java.aetherDependencyResolver.xml
java/java-runtime/: BUILD  BUILD.bazel
java/java-runtime/resources/: intellij.java.rt.xml
java/java-runtime/src/: FormPreviewFrame.java  RuntimeBundle.properties
jps/model-api/: BUILD  BUILD.bazel  api-dump-unreviewed.txt  api-dump.txt
jps/model-serialization/: BUILD  BUILD.bazel  api-dump-unreviewed.txt  api-dump.txt  exposed-private-api.txt
jps/model-serialization/testSrc/: BUILD.bazel
jps/standalone-builder/: BUILD  BUILD.bazel
jps/standalone-builder/src/: jps.gdsl
native/IdeaWin32/: CMakeLists.txt  IdeaWin32.c  IdeaWin32.cpp  IdeaWin32.h  IdeaWin32.props  IdeaWin32.rc  IdeaWin32.sln  IdeaWin32.vcproj  IdeaWin32.vcxproj  IdeaWin32.vcxproj.filters  build.cmd  jni.h  jni_md.h  readme.txt  stdafx.cpp  stdafx.h
native/LinuxGlobalMenu/: CMakeLists.txt  DbusMenuWrapper.c  DbusMenuWrapper.h  Dockerfile.build  test.cc
native/MacEnvReader/: CMakeLists.txt  printenv.c
native/MacLauncher/: CMakeLists.txt  Info.plist  Launcher.h  Launcher.m  Launcher.pch  PropertyFileReader.h  PropertyFileReader.m  VMOptionsReader.h  VMOptionsReader.m  main.m  rosetta.h  rosetta.m  utils.h  utils.m
native/MacLauncher/MacLauncher.xcodeproj/: project.pbxproj
native/MacRestarter/: CMakeLists.txt  make.sh  restarter.m
native/MacScreenMenu/: CMakeLists.txt  make.sh
native/MacScreenMenu/src/: CustomMenuItemView.h  CustomMenuItemView.m  Menu.h  Menu.m  MenuItem.h  MenuItem.m  java_awt_event_InputEvent.h  java_awt_event_KeyEvent.h
native/MacTouchBar/: CMakeLists.txt  build.gradle  nst.m  settings.gradle
native/MacTouchBar/MacTouchBar.xcodeproj/: project.pbxproj
native/MacTouchBar/src/: Button.m  ButtonDesc.h  ButtonDesc.m  ItemDesc.h  ItemDesc.m  JTypes.h  Popover.m  PopoverDesc.h  PopoverDesc.m  Scrubber.m  ScrubberDesc.h  ScrubberDesc.m  ScrubberItemView.h  ScrubberItemView.m  SpacingDesc.h  SpacingDesc.m  TouchBar.h  TouchBar.m  Utils.h  Utils.m  nst.m
native/WinElevator/: CMakeLists.txt  Elevator.sln  README.txt  WinElevator.rc  elevTools.h  elevator.c
native/WinElevator/AppxReparseTool/: AppxReparse.rc  AppxReparseTool.vcxproj  AppxReparseTool.vcxproj.filters  README.txt  appxreparse.c  resource.h
native/WinElevator/elevShared/: elevShared.vcxitems  elevShared.vcxitems.filters  elevTools.h
native/WinElevator/elevator/: Resource.rc  elevator.c  elevator.vcxproj  elevator.vcxproj.filters  resource.h
native/WinElevator/launcher/: Resource.rc  launcher.c  launcher.vcxproj  launcher.vcxproj.filters  resource.h
native/WinFsNotifier/: .gitignore  CMakeLists.txt  build.cmd  fileWatcher3.c  fileWatcher3.cpp  fileWatcher3.rc
native/WinJumpListBridge/: CMakeLists.txt  README.md
native/WinLauncher/: .gitignore  CMakeLists.txt  DownloadCEF.cmake  README  WinLauncher.cpp  WinLauncher.manifest  WinLauncher.rc  WinLauncher.sln  resource.h
native/WinLauncher/WinLauncher/: .gitignore  BUILD  WinLauncher.cpp  WinLauncher.manifest  WinLauncher.rc  WinLauncher.vcxproj  WinLauncher.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
native/WinProcessListHelper/: .gitignore  CMakeLists.txt  WinProcessListHelper.cpp  WinProcessListHelper.rc  WinProcessListHelper.sln
native/WinProcessListHelper/WinProcessListHelper/: WinProcessFetcherNative.vcxproj  WinProcessFetcherNative.vcxproj.filters  main.cpp
native/WinRestarter/: .gitignore  CMakeLists.txt  build.cmd  restarter.c  restarter.rc
native/WinShellIntegration/: .gitignore  CMakeLists.txt  README.md
native/XPlatLauncher/: .editorconfig  .gitignore  Cargo.toml  README.md  about.hbs  about.toml  build.rs  clean.sh  deny.toml  download-rustups.sh  launcher-artifacts.properties
native/XPlatLauncher/.cargo/: config  config.toml
native/XPlatLauncher/gcompat-ext/: gcompat-ext.c
native/XPlatLauncher/resources/: Info.plist  Main.java  product_info.json  product_info_linux.json  product_info_macos.json  product_info_windows.json  xplat.vmoptions
native/XPlatLauncher/src/: cef_sandbox.rs  default.rs  docker.rs  errors.rs  java.rs  lib.rs  main.rs  mini_logger.rs  remote_dev.rs  ui.rs  utils.rs
native/XPlatLauncher/tests/: default_tests.rs  docker_tests.rs  product_info_tests.rs  remote_dev_tests.rs  smoke_tests.rs  startup_tests.rs  (+2 more)
native/breakgen/: .gitignore  AppMain.c  CMakeLists.txt  breakgen.sln  breakgen.vcproj  breakgen.vcxproj  breakgen.vcxproj.filters  build.cmd  make.sh
native/restarter/: .gitignore  Cargo.toml  ReadMe.txt  build.rs  restarter.cpp  restarter.m  restarter.sln  restarter.vcproj  restarter.vcxproj  restarter.vcxproj.filters
platform/boot/: BUILD  BUILD.bazel  api-dump-unreviewed.txt  api-dump.txt
platform/bootstrap/: BUILD  BUILD.bazel  api-dump-unreviewed.txt  module-content.yaml
platform/code-style-api/: BUILD.bazel  api-dump-experimental.txt  api-dump-unreviewed.txt  api-dump.txt  exposed-private-api.txt  exposed-third-party-api.txt
platform/configuration-store-impl/: BUILD  BUILD.bazel  OWNERSHIP  api-dump-unreviewed.txt  api-dump.txt  exposed-private-api.txt  exposed-third-party-api.txt
platform/core-api/: BUILD  BUILD.bazel  api-dump-experimental.txt  api-dump-unreviewed.txt  api-dump.txt  exposed-private-api.txt  exposed-third-party-api.txt  module-content.yaml
(+353727 files in other folders)
