load("@rules_java//java:defs.bzl", "java_binary")
load("//build:compiler-options.bzl", "create_kotlinc_options")

create_kotlinc_options(name= "k8", jvm_target = "8")
create_kotlinc_options(name= "k11", jvm_target = "11")
create_kotlinc_options(name = "k17", jvm_target = "17")

java_binary(
    name = "monorepo-jvm-builder",
#     jvm_flags = [],  -- Note(k15tfu): ignored w/ deploy jar, use @rules_jvm//:jvm-builder-jvm_flags
    main_class = "org.jetbrains.bazel.jvm.worker.JvmBuildWorker",
    visibility = ["//visibility:public"],
    runtime_deps = ["@rules_jvm//src/jvm-builder:jvm-builder-lib", "@lib//:rhizomedb-compiler-plugin", "@lib//:expects-compiler-plugin", "@lib//:rpc-compiler-plugin", "@lib//:noria-compiler-plugin"],
)

java_binary(
  name = "main_run",
  runtime_deps = [":main"],
  main_class = "com.intellij.idea.Main",
  jvm_flags = [
    "--add-opens=java.base/java.io=ALL-UNNAMED",
    "--add-opens=java.base/java.lang=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.net=ALL-UNNAMED",
    "--add-opens=java.base/java.nio=ALL-UNNAMED",
    "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
    "--add-opens=java.base/java.text=ALL-UNNAMED",
    "--add-opens=java.base/java.time=ALL-UNNAMED",
    "--add-opens=java.base/java.util=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
    "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
    "--add-opens=java.base/sun.net.dns=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
    "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
    "--add-opens=java.base/sun.security.util=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
    "--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED",
    "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
    "--add-opens=java.management/sun.management=ALL-UNNAMED",
    "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
    "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
    "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
    "-Didea.home.path=$${BUILD_WORKSPACE_DIRECTORY}",
  ]
)

## used to determine community root path in the test
## see community/build/tests-options.bzl
exports_files(["intellij.idea.community.main.iml"])

### auto-generated section `build intellij.idea.community.main` start
load("@rules_jvm//:jvm.bzl", "jvm_library")

jvm_library(
  name = "main",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//platform/main/intellij.platform.monolith.main:monolith-main",
    "//plugins/coverage",
    "//plugins/ant",
    "//platform/boot",
    "//platform/bootstrap",
    "//java/compiler/impl",
    "//java/compiler/openapi:java-compiler",
    "//java/debugger/impl",
    "//java/debugger/openapi:java-debugger",
    "//platform/diff-api:diff",
    "//platform/diff-impl",
    "//xml/dom-impl",
    "//xml/dom-openapi:dom",
    "//java/execution/impl",
    "//java/execution/openapi:java-execution",
    "//platform/extensions",
    "//platform/forms_rt:java-guiForms-rt",
    "//platform/icons",
    "//java/idea-ui:ui",
    "//java/java-impl:impl",
    "//java/java-runtime:rt",
    "//java/jsp-openapi:jsp",
    "//java/jsp-spi",
    "//platform/lang-api:lang",
    "//platform/lang-impl",
    "//platform/lvcs-api:lvcs",
    "//platform/lvcs-impl",
    "//java/compiler/instrumentation-util",
    "//java/openapi:java",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/starter",
    "//plugins/properties:properties-backend",
    "//java/ide-resources",
    "//java/ide-customization",
    "//resources:java-resources",
    "//resources-en:java-resources-en",
    "//spellchecker",
    "//java/jsp-base-openapi:jsp-base",
    "//java/testFramework",
    "//platform/testRunner",
    "//platform/usageView",
    "//platform/util",
    "//platform/vcs-api:vcs",
    "//platform/vcs-impl",
    "//platform/vcs-impl/exec",
    "//platform/vcs-impl/lang",
    "//platform/vcs-impl/lang/actions",
    "//platform/xdebugger-api:debugger",
    "//platform/xdebugger-impl:debugger-impl",
    "//xml/impl",
    "//xml/openapi:xml",
    "//community-resources:customization",
    "//java/plugin",
    "//plugins/copyright",
    "//platform/testFramework",
    "//plugins/ui-designer:java-guiForms-designer",
    "//plugins/dev:dev-plugin-main",
    "//plugins/devkit:devkit-plugin-main",
    "//plugins/eclipse",
    "//plugins/git4idea:vcs-git",
    "//plugins/git4idea/shared",
    "//plugins/git4idea/frontend",
    "//plugins/git-features-trainer:vcs-git-featuresTrainer",
    "//images",
    "//plugins/groovy",
    "//plugins/junit",
    "//plugins/maven",
    "//RegExpSupport:regexp",
    "//plugins/svn4idea:vcs-svn",
    "//plugins/testng",
    "//plugins/IntelliLang/java-support:java-langInjection",
    "//plugins/IntelliLang/xml-support:xml-langInjection",
    "//plugins/xpath",
    "//plugins/xslt-debugger",
    "//plugins/xslt-debugger/engine:xslt-debugger-rt",
    "//plugins/java-i18n",
    "//plugins/tasks/tasks-api:tasks",
    "//plugins/tasks/tasks-java:java",
    "//plugins/github/github-core:vcs-github",
    "//plugins/hg4idea:vcs-hg",
    "//xml/relaxng",
    "//plugins/gradle/java",
    "//platform/remote-servers/impl",
    "//plugins/properties/properties-resource-bundle-editor:resource-bundle-editor",
    "//plugins/javaFX/community",
    "//plugins/javaFX/jps",
    "//java/manifest",
    "//plugins/yaml/backend",
    "//plugins/tasks/tasks-core:core",
    "//plugins/tasks/tasks-core/jira",
    "//plugins/java-decompiler/plugin:java-decompiler",
    "//platform/structuralsearch:structuralSearch",
    "//java/structuralsearch-java:structuralSearch",
    "//plugins/groovy/structuralsearch-groovy:structuralSearch",
    "//plugins/groovy/git",
    "//json/backend",
    "//java/typeMigration",
    "//plugins/terminal",
    "//plugins/terminal/frontend",
    "//plugins/terminal/backend",
    "//plugins/stats-collector",
    "//plugins/completion-ml-ranking-models",
    "//plugins/completion-ml-ranking",
    "//plugins/stream-debugger-core:debugger-streams-core",
    "//plugins/stream-debugger:java-debugger-streams",
    "@lib//:jgoodies-common",
    "//plugins/editorconfig:editorconfig-plugin-main",
    "//plugins/sh",
    "//plugins/terminal/sh",
    "//plugins/gradle-maven:gradle-java-maven",
    "//plugins/markdown/core:markdown",
    "//plugins/markdown/plugin:plugin-main",
    "//plugins/webp",
    "//plugins/emojipicker",
    "//plugins/gradle/gradle-dependency-updater:dependencyUpdater",
    "//platform/settings-sync-core:settingsSync-core",
    "//plugins/settings-sync/jba:settingsSync",
    "//java/java-features-trainer:featuresTrainer",
    "//plugins/ml-local-models/java",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//plugins/laf/macos",
    "//plugins/laf/win10",
    "//plugins/search-everywhere-ml",
    "//plugins/marketplace-ml",
    "//plugins/toml",
    "//platform/tracing-ide",
    "//notebooks/visualization",
    "//plugins/keymaps/eclipse-keymap:keymap-eclipse",
    "//plugins/keymaps/visual-studio-keymap:keymap-visualStudio",
    "//plugins/keymaps/netbeans5.6-keymap:keymap-netbeans",
    "//plugins/evaluation-plugin",
    "//plugins/evaluation-plugin/languages/java",
    "//platform/warmup",
    "//plugins/remote-control",
    "//platform/polySymbols",
    "//plugins/performanceTesting/core:performanceTesting",
    "//platform/smart-update",
    "//plugins/gradle/intellij.gradle.analysis:analysis",
    "//plugins/htmltools:html-tools",
    "//platform/new-ui-onboarding",
    "//platform/new-users-onboarding",
    "//plugins/kotlin/onboarding-promoter",
    "//platform/execution-process-elevation",
    "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml",
    "//plugins/yaml",
    "//platform/compose",
    "//json",
    "//java/java-terminal:terminal-tests",
    "//java/java-terminal:terminal",
    "//jvm/jvm-analysis-impl:analysis-impl",
    "//plugins/ByteCodeViewer:java-byteCodeViewer",
    "//plugins/github/github-json:vcs-github-json",
    "//plugins/search-everywhere-ml/ranking/core",
    "//plugins/search-everywhere-ml/ranking/java",
    "//plugins/search-everywhere-ml/ranking/vcs",
    "//plugins/search-everywhere-ml/ranking/yaml",
    "//plugins/search-everywhere-ml/typos",
    "//plugins/grazie",
    "//plugins/compose:compose-ide-plugin",
    "//plugins/compose/intellij.compose.ide.plugin.k1:ide-plugin-k1",
    "//plugins/compose/intellij.compose.ide.plugin.k2:ide-plugin-k2",
    "//plugins/compose/intellij.compose.ide.plugin.shared:ide-plugin-shared",
    "//plugins/compose/intellij.compose.ide.plugin.resources:ide-plugin-resources",
    "//plugins/compose/intellij.compose.ide.plugin.gradleTooling:ide-plugin-gradleTooling-rt",
    "//plugins/git-modal-commit:vcs-git-commit-modal",
    "//plugins/maven/maven-event-listener:server-eventListener",
    "//plugins/maven/maven3-server-impl:server-m3-impl",
    "//plugins/maven/maven36-server-impl:server-m36-impl",
    "//plugins/maven/maven40-server-impl:server-m40",
    "//plugins/mcp-server:mcpserver",
  ]
)

jvm_library(
  name = "main_test_lib",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  deps = [
    "//spellchecker",
    "//spellchecker:spellchecker_test_lib",
    "//java/java-tests:tests_test_lib",
    "//plugins/junit/java-tests:java-tests_test_lib",
    "//jvm/jvm-analysis-java-tests:analysis-java-tests_test_lib",
    "//plugins/svn4idea:vcs-svn-tests_test_lib",
    "//plugins/tasks/tasks-tests:tests_test_lib",
    "//xml/dom-tests:dom-tests_test_lib",
    "//plugins/IntelliLang/tests:tests_test_lib",
    "//xml/tests:tests_test_lib",
    "//jps/model-serialization:model-serialization-tests_test_lib",
    "//plugins/ui-designer/jps-plugin:java-guiForms-jps",
    "//platform/structuralsearch:structuralSearch-tests_test_lib",
    "//json/backend/tests:tests_test_lib",
    "//platform/platform-tests:tests_test_lib",
    "//jps/model-impl:model-tests_test_lib",
    "//platform/diff-impl/tests:tests_test_lib",
    "//platform/built-in-server:builtInServer-tests_test_lib",
    "//updater",
    "//updater:updater_test_lib",
    "//platform/script-debugger/debugger-ui:scriptDebugger-ui",
    "//platform/build-scripts/icons:images-build",
    "//platform/build-scripts/icons:images-build_test_lib",
    "//plugins/stats-collector:statsCollector-tests_test_lib",
    "//plugins/completion-ml-ranking-models:completionMlRankingModels-tests_test_lib",
    "//plugins/completion-ml-ranking:completionMlRanking-tests_test_lib",
    "//plugins/testng_rt/tests:tests_test_lib",
    "//platform/workspace/storage/tests:tests_test_lib",
    "//platform/workspace/jps/tests:tests_test_lib",
    "//plugins/textmate",
    "//plugins/textmate:textmate_test_lib",
    "//plugins/space/jps-plugin:java-jps",
    "//build/tasks",
    "//build/tasks:tasks_test_lib",
    "//plugins/junit5_rt_tests:junit-v5-rt-tests_test_lib",
    "//plugins/properties/tests:tests_test_lib",
    "//platform/execution-impl:execution-tests_test_lib",
    "//plugins/commander",
    "//plugins/commander:commander_test_lib",
    "//plugins/configuration-script",
    "//plugins/configuration-script:configuration-script_test_lib",
    "//plugins/configuration-script:configurationScript-test-java_test_lib",
    "//platform/statistics/envTests:envTests_test_lib",
    "//plugins/toml/tests:tests_test_lib",
    "//plugins/maven/src/test:maven-tests_test_lib",
    "//plugins/gradle/java:java-tests_test_lib",
    "//plugins/groovy/groovy-uast-tests:uast-tests_test_lib",
    "//platform/remote-servers/target-integration-tests:remoteServers-targetsIntegrationTests_test_lib",
    "//python:python-commonTests_test_lib",
    "//python/python-sdk:sdk",
    "//python/python-sdk:sdk_test_lib",
    "//plugins/restructuredtext",
    "//plugins/markdown/test:tests_test_lib",
    "//plugins/search-everywhere-ml/ranking/core",
    "//plugins/search-everywhere-ml/ranking/core:core_test_lib",
    "//plugins/search-everywhere-ml/typos",
    "//plugins/search-everywhere-ml/typos:typos_test_lib",
    "//jps/jps-builders:build-tests_test_lib",
    "//plugins/devkit/jps-plugin:jps-tests_test_lib",
    "//plugins/groovy/jps-plugin:jps-tests_test_lib",
    "//plugins/ant/jps-plugin:jps-tests_test_lib",
    "//platform/testFramework/junit5",
    "//platform/testFramework/junit5:junit5_test_lib",
    "//plugins/devkit/intellij.devkit.workspaceModel/tests:tests_test_lib",
    "//plugins/performanceTesting/scripts-ui:ui",
    "//plugins/performanceTesting/scripts-ui:ui_test_lib",
    "//uast/uast-tests:tests_test_lib",
    "//platform/runtime/repository/tests:tests_test_lib",
    "//platform/runtime/product/tests:tests_test_lib",
    "//tools/devLauncher/tests:tests_test_lib",
    "//plugins/htmltools:html-tools-tests_test_lib",
    "//plugins/lombok",
    "//plugins/lombok:lombok_test_lib",
    "//xml/xmlbeans",
    "//xml/xmlbeans:xmlbeans_test_lib",
    "//plugins/jsonpath",
    "//plugins/jsonpath:jsonpath_test_lib",
    "//plugins/ui-designer/jps-plugin/tests:tests_test_lib",
    "//platform/util/coroutines:coroutines-tests_test_lib",
    "//platform/util/progress:progress-tests_test_lib",
    "//platform/testFramework/junit5.jimfs",
    "//platform/testFramework/junit5.jimfs:junit5.jimfs_test_lib",
    "//platform/whatsNew",
    "//platform/whatsNew:whatsNew_test_lib",
    "//platform/remoteDev-util",
    "//platform/remoteDev-util:remoteDev-util_test_lib",
    "//wintools",
    "//wintools:wintools_test_lib",
    "//python/python-exec-service:community-execService",
    "//python/python-exec-service:community-execService_test_lib",
    "//python/python-pyproject:pyproject",
    "//python/python-pyproject:pyproject_test_lib",
    "//platform/indexing-tests:indexing-tests_test_lib",
    "//platform/testFramework/monorepo:monorepo_test_lib",
  ],
  runtime_deps = [
    "//platform/main/intellij.platform.monolith.main:monolith-main",
    "//plugins/coverage",
    "//plugins/ant",
    "//platform/boot",
    "//platform/bootstrap",
    "//java/compiler/impl",
    "//java/compiler/openapi:java-compiler",
    "//java/debugger/impl",
    "//java/debugger/openapi:java-debugger",
    "//platform/diff-api:diff",
    "//platform/diff-impl",
    "//xml/dom-impl",
    "//xml/dom-openapi:dom",
    "//java/execution/impl",
    "//java/execution/openapi:java-execution",
    "//platform/extensions",
    "//platform/forms_rt:java-guiForms-rt",
    "//platform/icons",
    "//java/idea-ui:ui",
    "//java/java-impl:impl",
    "//java/java-runtime:rt",
    "//java/jsp-openapi:jsp",
    "//java/jsp-spi",
    "//platform/lang-api:lang",
    "//platform/lang-impl",
    "//platform/lvcs-api:lvcs",
    "//platform/lvcs-impl",
    "//java/compiler/instrumentation-util",
    "//java/openapi:java",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/starter",
    "//plugins/properties:properties-backend",
    "//java/ide-resources",
    "//java/ide-customization",
    "//resources:java-resources",
    "//resources-en:java-resources-en",
    "//spellchecker",
    "//java/jsp-base-openapi:jsp-base",
    "//java/testFramework",
    "//platform/testRunner",
    "//platform/usageView",
    "//platform/util",
    "//platform/vcs-api:vcs",
    "//platform/vcs-impl",
    "//platform/vcs-impl/exec",
    "//platform/vcs-impl/lang",
    "//platform/vcs-impl/lang/actions",
    "//platform/xdebugger-api:debugger",
    "//platform/xdebugger-impl:debugger-impl",
    "//xml/impl",
    "//xml/openapi:xml",
    "//community-resources:customization",
    "//java/plugin",
    "//plugins/copyright",
    "//platform/testFramework",
    "//plugins/ui-designer:java-guiForms-designer",
    "//plugins/dev:dev-plugin-main",
    "//plugins/devkit:devkit-plugin-main",
    "//plugins/eclipse",
    "//plugins/git4idea:vcs-git",
    "//plugins/git4idea/shared",
    "//plugins/git4idea/frontend",
    "//plugins/git-features-trainer:vcs-git-featuresTrainer",
    "//images",
    "//plugins/groovy",
    "//plugins/junit",
    "//plugins/maven",
    "//RegExpSupport:regexp",
    "//plugins/svn4idea:vcs-svn",
    "//plugins/testng",
    "//plugins/IntelliLang/java-support:java-langInjection",
    "//plugins/IntelliLang/xml-support:xml-langInjection",
    "//plugins/xpath",
    "//plugins/xslt-debugger",
    "//plugins/xslt-debugger/engine:xslt-debugger-rt",
    "//plugins/java-i18n",
    "//plugins/tasks/tasks-api:tasks",
    "//plugins/tasks/tasks-java:java",
    "//plugins/github/github-core:vcs-github",
    "//plugins/hg4idea:vcs-hg",
    "//xml/relaxng",
    "//plugins/gradle/java",
    "//platform/remote-servers/impl",
    "//plugins/properties/properties-resource-bundle-editor:resource-bundle-editor",
    "//plugins/javaFX/community",
    "//plugins/javaFX/jps",
    "//java/manifest",
    "//plugins/yaml/backend",
    "//plugins/tasks/tasks-core:core",
    "//plugins/tasks/tasks-core/jira",
    "//plugins/java-decompiler/plugin:java-decompiler",
    "//platform/structuralsearch:structuralSearch",
    "//java/structuralsearch-java:structuralSearch",
    "//plugins/groovy/structuralsearch-groovy:structuralSearch",
    "//plugins/groovy/git",
    "//json/backend",
    "//java/typeMigration",
    "//plugins/terminal",
    "//plugins/terminal/frontend",
    "//plugins/terminal/backend",
    "//plugins/stats-collector",
    "//plugins/completion-ml-ranking-models",
    "//plugins/completion-ml-ranking",
    "//plugins/stream-debugger-core:debugger-streams-core",
    "//plugins/stream-debugger:java-debugger-streams",
    "@lib//:jgoodies-common",
    "//plugins/editorconfig:editorconfig-plugin-main",
    "//plugins/sh",
    "//plugins/terminal/sh",
    "//plugins/gradle-maven:gradle-java-maven",
    "//plugins/markdown/core:markdown",
    "//plugins/markdown/plugin:plugin-main",
    "//plugins/webp",
    "//plugins/emojipicker",
    "//plugins/gradle/gradle-dependency-updater:dependencyUpdater",
    "//platform/settings-sync-core:settingsSync-core",
    "//plugins/settings-sync/jba:settingsSync",
    "//java/java-features-trainer:featuresTrainer",
    "//plugins/ml-local-models/java",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//plugins/laf/macos",
    "//plugins/laf/win10",
    "//plugins/search-everywhere-ml",
    "//plugins/marketplace-ml",
    "//plugins/toml",
    "//platform/tracing-ide",
    "//notebooks/visualization",
    "//plugins/keymaps/eclipse-keymap:keymap-eclipse",
    "//plugins/keymaps/visual-studio-keymap:keymap-visualStudio",
    "//plugins/keymaps/netbeans5.6-keymap:keymap-netbeans",
    "//plugins/evaluation-plugin",
    "//plugins/evaluation-plugin/languages/java",
    "//platform/warmup",
    "//plugins/remote-control",
    "//platform/polySymbols",
    "//plugins/performanceTesting/core:performanceTesting",
    "//platform/smart-update",
    "//plugins/gradle/intellij.gradle.analysis:analysis",
    "//plugins/htmltools:html-tools",
    "//platform/new-ui-onboarding",
    "//platform/new-users-onboarding",
    "//plugins/kotlin/onboarding-promoter",
    "//platform/execution-process-elevation",
    "//plugins/gitlab/gitlab-yaml:vcs-gitlab-yaml",
    "//plugins/yaml",
    "//platform/compose",
    "//json",
    "//java/java-terminal:terminal-tests",
    "//java/java-terminal:terminal",
    "//jvm/jvm-analysis-impl:analysis-impl",
    "//plugins/ByteCodeViewer:java-byteCodeViewer",
    "//plugins/github/github-json:vcs-github-json",
    "//plugins/search-everywhere-ml/ranking/core",
    "//plugins/search-everywhere-ml/ranking/java",
    "//plugins/search-everywhere-ml/ranking/vcs",
    "//plugins/search-everywhere-ml/ranking/yaml",
    "//plugins/search-everywhere-ml/typos",
    "//plugins/grazie",
    "//plugins/compose:compose-ide-plugin",
    "//plugins/compose/intellij.compose.ide.plugin.k1:ide-plugin-k1",
    "//plugins/compose/intellij.compose.ide.plugin.k2:ide-plugin-k2",
    "//plugins/compose/intellij.compose.ide.plugin.shared:ide-plugin-shared",
    "//plugins/compose/intellij.compose.ide.plugin.resources:ide-plugin-resources",
    "//plugins/compose/intellij.compose.ide.plugin.gradleTooling:ide-plugin-gradleTooling-rt",
    "//plugins/git-modal-commit:vcs-git-commit-modal",
    "//plugins/maven/maven-event-listener:server-eventListener",
    "//plugins/maven/maven3-server-impl:server-m3-impl",
    "//plugins/maven/maven36-server-impl:server-m36-impl",
    "//plugins/maven/maven40-server-impl:server-m40",
    "//plugins/mcp-server:mcpserver",
  ]
)
### auto-generated section `build intellij.idea.community.main` end

### auto-generated section `build intellij.idea.community.main.android` start
jvm_library(
  name = "main-android",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//android/android:core",
    "//:main",
    "//android/android-plugin:plugin",
    "//android/layoutlib",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//android/compose-designer",
    "//android/compose-ide-plugin",
    "//android/design-plugin",
    "//android/android-navigator:navigator",
  ]
)

jvm_library(
  name = "main-android_test_lib",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//android/android:core",
    "//:main",
    "//android/android-plugin:plugin",
    "//android/layoutlib",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//android/compose-designer",
    "//android/compose-ide-plugin",
    "//android/design-plugin",
    "//android/android-navigator:navigator",
  ]
)
### auto-generated section `build intellij.idea.community.main.android` end